Widget-Dropdown: rework
- Add border radius variable
- Add active caret color variable
- Remove `.divider` use in favor of `.dropdown-divider`
- Update docs with a 'back' link example
- Remove id/toggle/target from dropdown examples
- Clarify a bit about `data-cfw-dropdown-toggle` and `data-cfw-dropdown-target` use
- Move logic for positioning into dropdown.js to allow better control and to simplify CSS

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2251,7 +2251,7 @@ Anchor variants:<br />
                 <li><a href="#">Something else here</a></li>
             </ul>
         </li>
-        <li class="divider"></li>
+        <li class="dropdown-divider"></li>
         <li><a href="#">Separated link</a></li>
     </ul>
 </div>
@@ -2306,10 +2306,10 @@ Anchor variants:<br />
 <h3>Dropdown - Menu Alignment</h3>
 <div class="clearfix">
     <div class="btn-group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_3">
+        <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_3" data-cfw-dropdown-backlink=true>
             Default <!-- <span class="caret" aria-hidden="true"></span> -->
         </button>
-        <ul data-cfw-dropdown-target="dropdownTest_3">
+        <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownTest_3">
             <li class="dropdown-header">Dropdown header</li>
             <li><a href="#">Action</a></li>
             <li>
@@ -2322,7 +2322,7 @@ Anchor variants:<br />
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#">Separated link</a></li>
                         </ul>
                     </li>
@@ -2332,11 +2332,11 @@ Anchor variants:<br />
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#">Separated link</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li><a href="#">Separated link</a></li>
                 </ul>
             </li>
@@ -2351,15 +2351,15 @@ Anchor variants:<br />
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#">Separated link</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li><a href="#">Separated link</a></li>
                 </ul>
             </li>
-            <li class="divider"></li>
+            <li class="dropdown-divider"></li>
             <li class="disabled"><a href="#">Separated link</a></li>
         </ul>
     </div>
@@ -2368,7 +2368,7 @@ Anchor variants:<br />
         <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_4">
             Drop Up <!-- <span class="caret" aria-hidden="true"></span> -->
         </button>
-        <ul data-cfw-dropdown-target="dropdownTest_4">
+        <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownTest_4">
             <li class="dropdown-header">Dropdown header</li>
             <li><a href="#">Action</a></li>
             <li>
@@ -2381,7 +2381,7 @@ Anchor variants:<br />
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#">Separated link</a></li>
                         </ul>
                     </li>
@@ -2391,11 +2391,11 @@ Anchor variants:<br />
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#">Separated link</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li><a href="#">Separated link</a></li>
                 </ul>
             </li>
@@ -2410,15 +2410,15 @@ Anchor variants:<br />
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#">Separated link</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li><a href="#">Separated link</a></li>
                 </ul>
             </li>
-            <li class="divider"></li>
+            <li class="dropdown-divider"></li>
             <li class="disabled"><a href="#">Separated link</a></li>
         </ul>
     </div>
@@ -2427,7 +2427,7 @@ Anchor variants:<br />
         <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_5" data-cfw-dropdown-backlink=true>
             Drop Left <!-- <span class="caret" aria-hidden="true"></span> -->
         </button>
-        <ul data-cfw-dropdown-target="dropdownTest_5">
+        <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownTest_5">
             <li class="dropdown-header">Dropdown header</li>
             <li><a href="#">Action</a></li>
             <li>
@@ -2440,7 +2440,7 @@ Anchor variants:<br />
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#">Separated link</a></li>
                         </ul>
                     </li>
@@ -2450,11 +2450,11 @@ Anchor variants:<br />
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#">Separated link</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li><a href="#">Separated link</a></li>
                 </ul>
             </li>
@@ -2469,15 +2469,15 @@ Anchor variants:<br />
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#">Separated link</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li><a href="#">Separated link</a></li>
                 </ul>
             </li>
-            <li class="divider"></li>
+            <li class="dropdown-divider"></li>
             <li class="disabled"><a href="#">Separated link</a></li>
         </ul>
     </div>
@@ -2488,7 +2488,7 @@ Anchor variants:<br />
     <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownSub1" data-cfw-dropdown-backlink=true>
         Default<!-- <span class="caret" aria-hidden="true"></span> -->
     </button>
-    <ul data-cfw-dropdown-target="dropdownSub1">
+    <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownSub1">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
         <li class="dropdown-menu-left">
@@ -2529,7 +2529,7 @@ Anchor variants:<br />
                 </li>
             </ul>
         </li>
-        <li class="divider"></li>
+        <li class="dropdown-divider"></li>
         <li class="disabled"><a href="#">Separated link</a></li>
     </ul>
 </div>
@@ -2538,7 +2538,7 @@ Anchor variants:<br />
     <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownSub2" data-cfw-dropdown-backlink=true>
         Drop Right <!-- <span class="caret" aria-hidden="true"></span> -->
     </button>
-    <ul data-cfw-dropdown-target="dropdownSub2">
+    <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownSub2">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
         <li class="dropdown-menu-left">
@@ -2579,7 +2579,7 @@ Anchor variants:<br />
                 </li>
             </ul>
         </li>
-        <li class="divider"></li>
+        <li class="dropdown-divider"></li>
         <li class="disabled"><a href="#">Separated link</a></li>
     </ul>
 </div>
@@ -2588,7 +2588,7 @@ Anchor variants:<br />
     <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownSub3" data-cfw-dropdown-backlink=true>
         Drop Left <!-- <span class="caret" aria-hidden="true"></span> -->
     </button>
-    <ul data-cfw-dropdown-target="dropdownSub3">
+    <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownSub3">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
         <li class="dropdown-menu-left">
@@ -2629,10 +2629,164 @@ Anchor variants:<br />
                 </li>
             </ul>
         </li>
-        <li class="divider"></li>
+        <li class="dropdown-divider"></li>
         <li class="disabled"><a href="#">Separated link</a></li>
     </ul>
 </div>
+
+<h3>Dropup submenu alignment</h3>
+
+<div class="btn-group dropup">
+    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dup" data-cfw-dropdown-backlink="true">
+        Dropup
+    </button>
+    <ul class="dropdown-menu" data-cfw-dropdown-target="dup">
+        <li class="dropdown-header">Dropdown header</li>
+        <li><a href="#">Action</a></li>
+        <li class="dropdown-menu-left">
+            <a href="#">Left menu</a>
+            <ul>
+                <li class="dropdown-menu-left">
+                    <a href="#">Left menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown-menu-right">
+                    <a href="#">Right menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li class="dropdown-menu-right">
+            <a href="#">Right menu</a>
+            <ul>
+                <li class="dropdown-menu-left">
+                    <a href="#">Left menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown-menu-right">
+                    <a href="#">Right menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li class="dropdown-divider"></li>
+        <li class="disabled"><a href="#">Separated link</a></li>
+    </ul>
+</div>
+
+
+<div class="btn-group dropup dropdown-menu-right">
+    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dupR" data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
+        Dropup Right
+    </button>
+    <ul class="dropdown-menu" data-cfw-dropdown-target="dupR">
+        <li class="dropdown-header">Dropdown header</li>
+        <li><a href="#">Action</a></li>
+        <li class="dropdown-menu-left">
+            <a href="#">Left menu</a>
+            <ul>
+                <li class="dropdown-menu-left">
+                    <a href="#">Left menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown-menu-right">
+                    <a href="#">Right menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li class="dropdown-menu-right">
+            <a href="#">Right menu</a>
+            <ul>
+                <li class="dropdown-menu-left">
+                    <a href="#">Left menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown-menu-right">
+                    <a href="#">Right menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li class="dropdown-divider"></li>
+        <li class="disabled"><a href="#">Separated link</a></li>
+    </ul>
+</div>
+
+<div class="btn-group dropup dropdown-menu-left">
+    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dupL" data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
+        Dropup Left
+    </button>
+    <ul class="dropdown-menu" data-cfw-dropdown-target="dupL">
+        <li class="dropdown-header">Dropdown header</li>
+        <li><a href="#">Action</a></li>
+        <li class="dropdown-menu-left">
+            <a href="#">Left menu</a>
+            <ul>
+                <li class="dropdown-menu-left">
+                    <a href="#">Left menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown-menu-right">
+                    <a href="#">Right menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li class="dropdown-menu-right">
+            <a href="#">Right menu</a>
+            <ul>
+                <li class="dropdown-menu-left">
+                    <a href="#">Left menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown-menu-right">
+                    <a href="#">Right menu</a>
+                    <ul>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li class="dropdown-divider"></li>
+        <li class="disabled"><a href="#">Separated link</a></li>
+    </ul>
+</div>
+
 
 <h3>Caret</h3>
 <p>
