--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -938,7 +938,7 @@ $(window).ready(function() {
                 <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_0">
                     Action
                 </button>
-                <ul data-cfw-dropdown-target="dropdownTest_0">
+                <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownTest_0">
                     <li class="dropdown-header">Dropdown header</li>
                     <li><a href="#0-1">Action</a></li>
                     <li>
@@ -951,7 +951,7 @@ $(window).ready(function() {
                                     <li><a href="#0-1-1-0">Action</a></li>
                                     <li><a href="#0-1-1-1">Another action</a></li>
                                     <li><a href="#0-1-1-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#0-1-1-3">Separated link</a></li>
                                 </ul>
                             </li>
@@ -961,11 +961,11 @@ $(window).ready(function() {
                                     <li><a href="#0-1-2-0">Action</a></li>
                                     <li><a href="#0-1-2-1">Another action</a></li>
                                     <li><a href="#0-1-2-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#0-1-2-3">Separated link</a></li>
                                 </ul>
                             </li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#0-1-3">Separated link</a></li>
                         </ul>
                     </li>
@@ -981,15 +981,15 @@ $(window).ready(function() {
                                     <li><a href="#0-2-2-0">Action</a></li>
                                     <li><a href="#0-2-2-1">Another action</a></li>
                                     <li><a href="#0-2-2-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#0-2-2-3">Separated link</a></li>
                                 </ul>
                             </li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#0-2-3">Separated link</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li class="disabled"><a href="#0-3">Separated link</a></li>
                 </ul>
             </div>
@@ -1000,17 +1000,11 @@ $(window).ready(function() {
                 <button type="button" class="btn btn-danger dropdown-toggle" data-cfw="dropdown">
                     <span class="sr-only">Toggle Dropdown</span>
                 </button>
-                <!--
-                <button type="button" class="btn btn-danger dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_1" id="dropdownTest_1">
-                    <span class="sr-only">Toggle Dropdown</span>
-                </button>
-                <ul data-cfw-dropdown-target="dropdownTest_1">
-                -->
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li><a href="#">Separated link</a></li>
                 </ul>
             </div>
@@ -1021,17 +1015,11 @@ $(window).ready(function() {
                 <a href="/foo/" role="button" class="btn btn-danger dropdown-toggle" data-cfw="dropdown">
                     <span class="sr-only">Toggle Dropdown</span>
                 </a>
-                <!--
-                <button type="button" class="btn btn-danger dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_1" id="dropdownTest_1">
-                    <span class="sr-only">Toggle Dropdown</span>
-                </button>
-                <ul data-cfw-dropdown-target="dropdownTest_1">
-                -->
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li><a href="#">Separated link</a></li>
                 </ul>
             </div>
@@ -1041,7 +1029,7 @@ $(window).ready(function() {
                 <button type="button" class="btn btn-default dropdown-toggle" data-cfw-dropdown-toggle="dropdownTest_2" id="js_dropdown_2">
                     JS init w/ back
                 </button>
-                <ul data-cfw-dropdown-target="dropdownTest_2" class="slide1">
+                <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownTest_2" class="slide1">
                     <li><a href="#2-1">Action</a></li>
                     <li>
                         <a href="#2-1">Another action with a really long entry</a>
@@ -1053,7 +1041,7 @@ $(window).ready(function() {
                                     <li><a href="#2-1-1-0">Action</a></li>
                                     <li><a href="#2-1-1-1">Another action</a></li>
                                     <li><a href="#2-1-1-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#2-1-1-3">Separated link</a></li>
                                 </ul>
                             </li>
@@ -1063,11 +1051,11 @@ $(window).ready(function() {
                                     <li><a href="#2-1-2-0">Action</a></li>
                                     <li><a href="#2-1-2-1">Another action</a></li>
                                     <li><a href="#2-1-2-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#2-1-2-3">Separated link</a></li>
                                 </ul>
                             </li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#2-1-3">Separated link</a></li>
                         </ul>
                     </li>
@@ -1083,15 +1071,15 @@ $(window).ready(function() {
                                     <li><a href="#2-2-2-0">Action</a></li>
                                     <li><a href="#2-2-2-1">Another action</a></li>
                                     <li><a href="#2-2-2-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#2-2-2-3">Separated link</a></li>
                                 </ul>
                             </li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#2-2-3">Separated link</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li class="disabled"><a href="#2-3">Separated link</a></li>
                 </ul>
             </div>
@@ -1108,7 +1096,7 @@ $(window).ready(function() {
                 <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_3" data-cfw-dropdown-hover=true>
                     Hover Activated
                 </button>
-                <ul data-cfw-dropdown-target="dropdownTest_3">
+                <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownTest_3">
                     <li class="dropdown-header">Dropdown header</li>
                     <li><a href="#3-1">Action</a></li>
                     <li>
@@ -1121,7 +1109,7 @@ $(window).ready(function() {
                                     <li><a href="#3-1-1-0">Action</a></li>
                                     <li><a href="#3-1-1-1">Another action</a></li>
                                     <li><a href="#3-1-1-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#3-1-1-3">Separated link</a></li>
                                 </ul>
                             </li>
@@ -1131,11 +1119,11 @@ $(window).ready(function() {
                                     <li><a href="#3-1-2-0">Action</a></li>
                                     <li><a href="#3-1-2-1">Another action</a></li>
                                     <li><a href="#3-1-2-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#3-1-2-3">Separated link</a></li>
                                 </ul>
                             </li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#3-1-3">Separated link</a></li>
                         </ul>
                     </li>
@@ -1150,15 +1138,15 @@ $(window).ready(function() {
                                     <li><a href="#3-2-2-0">Action</a></li>
                                     <li><a href="#3-2-2-1">Another action</a></li>
                                     <li><a href="#3-2-2-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#3-2-2-3">Separated link</a></li>
                                 </ul>
                             </li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#3-2-3">Separated link</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li class="disabled"><a href="#3-3">Separated link</a></li>
                 </ul>
             </div>
@@ -1172,7 +1160,7 @@ $(window).ready(function() {
                     <li class="dropdown-header">Dropdown header</li>
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li class="disabled"><a href="#">Separated link</a></li>
                 </ul>
             </div>
@@ -1195,7 +1183,7 @@ $(window).ready(function() {
                             <li><a href="#">Something else here</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li><a href="#">Separated link</a></li>
                 </ul>
             </div>
@@ -1213,7 +1201,7 @@ $(window).ready(function() {
                 <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_4">
                     Drop Up
                 </button>
-                <ul data-cfw-dropdown-target="dropdownTest_4">
+                <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownTest_4">
                     <li class="dropdown-header">Dropdown header</li>
                     <li><a href="#4-1">Action</a></li>
                     <li>
@@ -1226,7 +1214,7 @@ $(window).ready(function() {
                                     <li><a href="#4-1-1-0">Action</a></li>
                                     <li><a href="#4-1-1-1">Another action</a></li>
                                     <li><a href="#4-1-1-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#4-1-1-3">Separated link</a></li>
                                 </ul>
                             </li>
@@ -1236,11 +1224,11 @@ $(window).ready(function() {
                                     <li><a href="#4-1-2-0">Action</a></li>
                                     <li><a href="#4-1-2-1">Another action</a></li>
                                     <li><a href="#4-1-2-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#4-1-2-3">Separated link</a></li>
                                 </ul>
                             </li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#4-1-3">Separated link</a></li>
                         </ul>
                     </li>
@@ -1256,15 +1244,15 @@ $(window).ready(function() {
                                     <li><a href="#4-2-2-0">Action</a></li>
                                     <li><a href="#4-2-2-1">Another action</a></li>
                                     <li><a href="#4-2-2-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#4-2-2-3">Separated link</a></li>
                                 </ul>
                             </li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#4-2-3">Separated link</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li class="disabled"><a href="#4-3">Separated link</a></li>
                 </ul>
             </div>
@@ -1274,7 +1262,7 @@ $(window).ready(function() {
                 <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="dropdownTest_5" data-cfw-dropdown-backlink=true>
                     Drop Left
                 </button>
-                <ul data-cfw-dropdown-target="dropdownTest_5">
+                <ul class="dropdown-menu" data-cfw-dropdown-target="dropdownTest_5">
                     <li class="dropdown-header">Dropdown header</li>
                     <li><a href="#5-1">Action</a></li>
                     <li>
@@ -1287,7 +1275,7 @@ $(window).ready(function() {
                                     <li><a href="#5-1-1-0">Action</a></li>
                                     <li><a href="#5-1-1-1">Another action</a></li>
                                     <li><a href="#5-1-1-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#5-1-1-3">Separated link</a></li>
                                 </ul>
                             </li>
@@ -1297,11 +1285,11 @@ $(window).ready(function() {
                                     <li><a href="#5-1-2-0">Action</a></li>
                                     <li><a href="#5-1-2-1">Another action</a></li>
                                     <li><a href="#5-1-2-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#5-1-2-3">Separated link</a></li>
                                 </ul>
                             </li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#5-1-3">Separated link</a></li>
                         </ul>
                     </li>
@@ -1317,15 +1305,15 @@ $(window).ready(function() {
                                     <li><a href="#5-2-2-0">Action</a></li>
                                     <li><a href="#5-2-2-1">Another action</a></li>
                                     <li><a href="#5-2-2-2">Something else here</a></li>
-                                    <li class="divider"></li>
+                                    <li class="dropdown-divider"></li>
                                     <li><a href="#5-2-2-3">Separated link</a></li>
                                 </ul>
                             </li>
-                            <li class="divider"></li>
+                            <li class="dropdown-divider"></li>
                             <li><a href="#5-2-3">Separated link</a></li>
                         </ul>
                     </li>
-                    <li class="divider"></li>
+                    <li class="dropdown-divider"></li>
                     <li class="disabled"><a href="#5-3">Separated link</a></li>
                 </ul>
             </div>
